@@ -99,6 +99,8 @@ Lua:
    writing the tesselation control shader.
    4) New vertex primitive type GL.PATCHES
  ! Renamed SetShaderParameter to SetGeometryShaderParameter to avoid confusion of what kind shader parameters belongs to.
+ - Added VFS.GetLoadedArchives() -> { string archiveName1, string archiveName2 ... }
+ - Added VFS.GetArchivePath(string archiveName1) -> string archivePathOnDisk
 
 
 AI:
